# protocol-core

./: .gitignore  Cargo.toml  README.md
.github/: dependabot.yml
node-models/: README.md  package-lock.json  package.json  tsconfig.json
node-models/src/: block.ts  common.ts  index.ts  jsonrpc.ts  transaction.ts
rs-models/: Cargo.toml  audit_actions.md
rs-models/examples/: test_compat.rs
rs-models/src/: block_height.rs  boinc.rs  crypto.rs  lib.rs  naming.rs  poi.rs  stealth.rs  system_addresses.rs  test_ids.rs  types.rs
ts-models/: .eslintrc.cjs  .gitignore  README.md  package-lock.json  package.json  tsconfig.build.json  tsconfig.json  vitest.config.ts
ts-models/scripts/: clean.mjs
ts-models/src/: account.ts  block.ts  common.ts  index.ts  network.ts  search.ts  transaction.ts
ts-models/test/: block.spec.ts
