[workspace]
resolver = "2"
members = ["rs-models"]

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Silica-Protocol/protocol-core"

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"

# Logging
tracing = "0.1"

# Utilities
hex = "0.4"
libc = "0.2"

# Cryptography
sha2 = "0.10"
sha3 = "0.10"
blake3 = "1.5"
rand = { version = "0.8.4", features = ["getrandom"] }

# Security-focused cryptography
subtle = "2.5"
secrecy = "0.10.3"
zeroize = { version = "1.7", features = ["zeroize_derive"] }

# Post-quantum crypto
ed25519-dalek = { version = "2.1", features = ["serde", "pkcs8"] }
pqcrypto-dilithium = "0.5"
pqcrypto-kyber = "0.8"
pqcrypto-traits = "0.3"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
