[workspace]
resolver = "2"
members = ["rs-models"]

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Silica-Protocol/protocol-core"

[workspace.dependencies]
# ============================================================================
# SERIALIZATION - Version locked for ABI stability
# ============================================================================
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.148"

# ============================================================================
# TIME - Locked for consistency
# ============================================================================
chrono = { version = "=0.4.42", default-features = false, features = ["serde", "std", "clock"] }

# ============================================================================
# ERROR HANDLING
# ============================================================================
anyhow = "1.0"
thiserror = "2.0"

# ============================================================================
# LOGGING
# ============================================================================
tracing = "0.1"

# ============================================================================
# UTILITIES
# ============================================================================
hex = "0.4"
libc = "0.2"
once_cell = "1.19"

# ============================================================================
# CRYPTOGRAPHY - MISSION CRITICAL - ALL VERSIONS LOCKED
# ============================================================================
# Hash functions
sha2 = "=0.10.9"
sha3 = "=0.10.8"
blake3 = "=1.8.2"

# RNG - locked to audited version
rand = { version = "=0.8.5", features = ["getrandom"] }
rand_core = "=0.6.4"

# Security primitives - constant-time operations
subtle = "=2.6.1"
secrecy = "=0.10.3"
zeroize = { version = "=1.8.2", features = ["zeroize_derive"] }

# ============================================================================
# POST-QUANTUM CRYPTOGRAPHY - MISSION CRITICAL - LOCKED
# ============================================================================
ed25519-dalek = { version = "=2.2.0", features = ["serde", "pkcs8", "rand_core"] }

# ML-DSA (FIPS 204) - RustCrypto implementation
# Provides deterministic key generation from 32-byte seeds
# Note: Using RC version until 0.1.0 stable release
ml-dsa = { version = "0.1.0-rc.7", features = ["rand_core"] }
hybrid-array = "0.4"  # Required for ml-dsa Array type conversions

# ============================================================================
# MNEMONIC DERIVATION - SIP-1 Standard
# ============================================================================
# BIP39 mnemonic derivation for ML-DSA
# Development: use local path
# ml-dsa-bip39 = { path = "../ml-dsa-bip39" }
# Production: use git
ml-dsa-bip39 = { git = "https://github.com/Silica-Protocol/ml-dsa-bip39", branch = "main" }
bip39 = "2.1"

# ============================================================================
# PROFILES
# ============================================================================
[profile.release]
lto = true
codegen-units = 1
opt-level = 3
panic = "abort"
strip = true

[profile.dev]
opt-level = 1
debug = true
