[package]
name = "silica-models"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core data models and cryptographic primitives for the Silica Protocol"

[dependencies]
# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Time
chrono = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Utilities
hex = { workspace = true }

# Cryptography
sha2 = { workspace = true }
sha3 = { workspace = true }
blake3 = { workspace = true }
rand = { workspace = true }

# Security-focused cryptography
subtle = { workspace = true }
zeroize = { workspace = true }
secrecy = { workspace = true }

# Post-quantum crypto
ed25519-dalek = { workspace = true }
pqcrypto-dilithium = { workspace = true }
pqcrypto-kyber = { workspace = true }
pqcrypto-traits = { workspace = true }

# System interfaces
libc = { workspace = true }
tracing = { workspace = true }

# ZK-proof dependencies (Halo2 proving system)
halo2_proofs = "0.3"
halo2_gadgets = "0.3"
ff = "0.13"           # Finite field arithmetic
group = "0.13"        # Elliptic curve groups
pasta_curves = "0.5"  # Pallas/Vesta curves for Halo2
bincode = "1.3"       # Proof serialization