[package]
name = "silica-models"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core data models and cryptographic primitives for the Silica Protocol"

[dependencies]
# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Time
chrono = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Utilities
hex = { workspace = true }

# Cryptography
sha2 = { workspace = true }
sha3 = { workspace = true }
blake3 = { workspace = true }
rand = { workspace = true }

# Security-focused cryptography
subtle = { workspace = true }
zeroize = { workspace = true }
secrecy = { workspace = true }

# Post-quantum crypto
ed25519-dalek = { workspace = true }

# ML-DSA (FIPS 204) - Primary post-quantum signature algorithm
ml-dsa = { workspace = true }
hybrid-array = { workspace = true }

# Legacy: keeping for backward compatibility during migration
pqcrypto-dilithium = { workspace = true }
pqcrypto-kyber = { workspace = true }
pqcrypto-traits = { workspace = true }

# System interfaces
libc = { workspace = true }
tracing = { workspace = true }

# Note: ZK-proof dependencies (halo2, pasta_curves, etc.) belong in protocol/zkbridge-proofs
# silica-models should remain a minimal dependency for other crates